# walking-FES

./: .gitignore  README.md  fes.py  main.py  main.spec  mocap_processor.py  pyproject.toml  setup.py  suit_handler.py  workspace.code-workspace
assets/: left_gastr.ts_asset  left_hamstr.ts_asset  left_quad.ts_asset  left_tib.ts_asset  right_gastr.ts_asset  right_hamstr.ts_asset  right_quad.ts_asset  right_tib.ts_asset
examples/: glove_ff_mirror.py  glove_forcefeedback.py  play_haptic_touch.py  stream_bia.py  stream_emg.py  stream_mocap.py  stream_ppg.py
models/: model.pt  model454.pt
teslasuit_sdk/: ts_data.py  ts_data_streamer.py  ts_haptic_player.py
