[tool.poetry]
name = "walking-fes"
version = "0.1.0"
description = ""
authors = ["u.mitskevich <u.mitskevich@teslasuit.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.5"
numpy = "^1.22.4"
scipy = "^1.8.1"
pandas = "1.4.2"
PyQt5 = "5.15.6"
pyqtgraph = "0.12.4"
torch = {url = "https://download.pytorch.org/whl/lts/1.8/cpu/torch-1.8.2%2Bcpu-cp38-cp38-win_amd64.whl"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
